# HVDC-PJT

./: # 프로🏗️ HVDC PROJECT 시스템 전체 구조 분석.md  # 📋 입고 로직 및 함수 파일명 상세 보고.MD  # 🔌 다른 프로젝트에서 MCP 서버 사용하기.md  # 🔌 다른 프로젝트에서 MCP 서버 사용하기.md.backup  .aider.yaml  .autofix.yml  .cursorrules  .flake8  .gitignore  .npmrc  .pre-commit-config.yaml  01_TDD_DEVELOPMENT_PLAN.md  02_MACHO_FINAL_GUIDE.md  03_HVDC_SYSTEM_README.md  ADDITIONAL_INVENTORY_FUNCTIONS_REPORT.md  AI_TOOLS_INTEGRATION_GUIDE.md  Advanced_Optimization_Recommendations_20250709_005615.json  CHANGELOG.md  CODEX_SETUP_GUIDE.md  COMPLETE_WAREHOUSE_INVENTORY_FUNCTIONS_REPORT.md  DHL_Warehouse_데이터_복구_완료_리포트.md  DHL_Warehouse_복구_리포트_20250704_125729.json  DSV_OUTDOOR_Balance_Optimization_Report.md  Dockerfile  Dynamic_Priority_System_Final_Report.md  ENHANCED_DASHBOARD_COMPLETION_REPORT.md  F.PY  FIGMA_MCP_COMPLETE_GUIDE.md  FIGMA_MCP_COMPLETE_GUIDE.md.backup  FLOW_CODE_2_FIX_SUMMARY_20250704_072347.md  FLOW_CODE_ANALYSIS_SUMMARY_20250704_222257.md  FLOW_CODE_ANALYSIS_SUMMARY_20250704_223214.md  Flow_Code_Final_Validation_20250709_204919.json  HITACHI_Monthly_Warehouse_Summary_Report.md  HVDC_3D_Warehouse_Analysis_Report_20250709_230711.md  HVDC_3D_Warehouse_Analysis_Report_20250709_230711.md.backup  HVDC_CODE_ARCHITECTURE_DETAILED_ANALYSIS_v284.md  HVDC_CODE_ARCHITECTURE_DETAILED_ANALYSIS_v284.md.backup  HVDC_COMMAND_INTERFACE_INTEGRATION_REPORT.md  HVDC_Cleaned_Data_Validation_20250709_201313.json  (+561 more)
.continue/: README.md  config.json
.cursor/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
HVDC_PROJECT_COMPREHENSIVE_ARCHIVE_20250705_202853/: test_macho_system_archive.py
Mapping/: DOMESTIC_DELIVERY_APRIL_VERIFICATION.md  Domestic_Rate_Additional_Analysis.md  Domestic_Rate_Reference_Summary.md  HVDC_Invoice_Mapping_Integration_Report.md  HVDC_Logistics_Flow_Report.md  HVDC_MAPPING_BACKUP_SUMMARY_v2.7.md  HVDC_MAPPING_SYSTEM_GUIDE.md  HVDC_Real_Data_Validation_Report.md  HVDC_v282_Patch_Summary.md  HVDC_v282_Project_Final_Report.md  HVDC_v282_VERIFICATION_COMPLETE.md  HVDC_v282_Work_Log.md  HVDC_v28_UPGRADE_GUIDE.md  analyze_hvdc_status.py  analyze_inland_trucking_v27.py  analyze_scnt_invoice_fixed.py  apply_v281_patch.py  contract_inland_trucking_charge_rates_v1.1.md  diagnose_mosb_issue.py  flow_code_gap_analysis.py  hvdc_inland_trucking_mapping_v27.ttl  hvdc_status_637records_20250629_043157.ttl  invoice_mapping_integration_v283.ttl  mapping_rules_v2.8.json  mapping_utils.py  quick_test_v282.py  real_data_analysis_summary.md  real_data_validation.py  repair_columns_tool.py  scnt_invoice_fixed_37records_20250629_044010.ttl  scnt_query_executor.py  test_v282_verification.py  test_v283_patch.py  test_v28_upgrade.py  test_v28_upgrade_large.py  verify_invoice_integration.py
backup_20250103/: ontology_integrated_schema_validator_v1.0.0.py
config/: wh_priority.yaml
data_cleaned/: HVDC_WAREHOUSE_INVOICE_CLEANED_20250709_201121.xlsx
docs/: CONTEXT_ENGINEERING_INTEGRATION_GUIDE.md  CONTEXT_ENGINEERING_INTEGRATION_GUIDE.md.backup  ENHANCED_CONTEXT_ENGINEERING_ANALYSIS.md  HVDC_CONTEXT_ENGINEERING_INTEGRATION_GUIDE.md  HVDC_CORE_LOGIC_GUIDE.md  HVDC_DataChain_Core_Logic.md  HVDC_DataChain_Documentation_Summary.md  HVDC_DataChain_Important_Notes.md  HVDC_DataChain_Integration_Guide.md  HVDC_DataChain_README.md  changelog.md  excel_agent_guide.md  네, HVDC_REAL_DATA_INTEGRATION.ini
hvdc_dashboard/: README.md  __init__.py  business_logic.py  config.py  data_loader.py  main.py  taipy_app.py
inland invoice/: inland_trucking_charge_rates.md
(+224 files in other folders)
